--- a/knn_digit_recognizer.ipynb
+++ b/knn_digit_recognizer.ipynb
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we try to create our own classification model using euclidean distance and knn. It has an accuracy of 79%."
+    "### Here we try to create our own classification model using euclidean distance and knn. It has an accuracy of 79%."
    ]
   },
   {
@@ -275,11 +275,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Here we use sklearn library to help determine an optimal k value and train our data. This resulted in a 92% accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import libraries from sklearn\n",
+    "\n",
     "from sklearn.datasets import load_digits\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
@@ -306,6 +315,9 @@
     }
    ],
    "source": [
+    "# Using cross valuation, we can get the optimal parameters. In this case we want the best k value to maximize our accuracy \n",
+    "# for the trained model.\n",
+    "\n",
     "ks = np.arange(2, 10)\n",
     "scores = []\n",
     "X_train = train_data[:4000]\n",
@@ -328,6 +340,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# here we predict the values for the test.csv and attempt to label each input correctly and write it to a results.csv\n",
+    "\n",
     "X_train = train_data[:4000]\n",
     "y_train = train_label[:4000]\n",
     "model = KNeighborsClassifier(n_neighbors=5)\n",
